--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* .minutes{
+.minutes{
     animation: cycle 6s infinite linear;
 }
 .hours{
@@ -7,10 +7,12 @@
 @keyframes cycle{
     from{ transform: rotate(0deg);}
     to{ transform: rotate(360deg);}
-} */
+}
+
+
 
 /* styles.css */
-body {
+/* body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +37,7 @@ body {
     width: 100%;
     height: 100%;
     transform: translateY(-3px); /* Fix for the hands positioning */
-}
+/* }
 
 .hand {
     width: 50%;
@@ -61,7 +63,7 @@ body {
     background: red;
 } */
 
-.num {
+/* .num {
     position: absolute;
     font-size: 24px;
     transform: translate(-50%, -50%);
@@ -78,7 +80,7 @@ body {
 #9  { top: 50%; left: 3%; }
 #10 { top: 35%; left: 8%; }
 #11 { top: 20%; left: 15%; }
-#12 { top: 15%; left: 50%; }
+#12 { top: 15%; left: 50%; } */
 
 
 
