--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@
     to{ transform: rotate(360deg);}
 }
 
-
+#clock{
+    width:80px;
+    height: auto;
+    border-radius: 50%;
+    background-color: aquamarine;
+}
 
 /* styles.css */
 /* body {
