--- a/style.css
+++ b/style.css
@@ -1,150 +1,3 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.minutes{
-    animation: cycle 6s infinite linear;
-}
-.hours{
-    animation: cycle 60s infinite linear;
-}
-@keyframes cycle{
-    from{ transform: rotate(0deg);}
-    to{ transform: rotate(360deg);}
-}
-
-.clock{
-    width:300px;
-    height: 300px;
-    border-radius: 50%;
-    display: block;
-    align-items: center;
-    align-self: center;
-    align-content: center;
-    background-color: aquamarine;
-}
-
-/* styles.css */
-/* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: #f0f0f0;
-    margin: 0;
-}
-
-.clock {
-    width: 300px;
-    height: 300px;
-    border: 20px solid black;
-    border-radius: 50%;
-    position: relative;
-    padding: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    background: white;
-}
-
-.face {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transform: translateY(-3px); /* Fix for the hands positioning */
-/* }
-
-.hand {
-    width: 50%;
-    background: black;
-    position: absolute;
-    top: 50%;
-    transform-origin: 100%;
-    transform: rotate(90deg);
-    transition: all 0.05s;
-    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-}
-
-.hours {
-    height: 6px;
-}
-
-.minutes {
-    height: 4px;
-}
-
-/* .second-hand {
-    height: 2px;
-    background: red;
-} */
-
-/* .num {
-    position: absolute;
-    font-size: 24px;
-    transform: translate(-50%, -50%);
-}
-
-#1  { top: 20%; left: 85%; }
-#2  { top: 35%; left: 92%; }
-#3  { top: 50%; left: 97%; }
-#4  { top: 65%; left: 92%; }
-#5  { top: 80%; left: 85%; }
-#6  { top: 85%; left: 50%; }
-#7  { top: 80%; left: 15%; }
-#8  { top: 65%; left: 8%; }
-#9  { top: 50%; left: 3%; }
-#10 { top: 35%; left: 8%; }
-#11 { top: 20%; left: 15%; }
-#12 { top: 15%; left: 50%; } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    background-color: #333333;
-    margin: 0;
-    padding: 0%;
-    background-color: linear-gradient(#333333, #3c3c79);
-}
-.title{
-        color: #fff;
-        font: bold;
-        font-size:3rem;
-    }
-.login-form
-{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: 0.5s;
-}
-.login-form.user-box input:focus~label,
-.login-form.user-box input:valid~label
-{
-    top:-20px;
-    left: 0;
-    color: aquamarine;
-    font-size: 12px;
-} */
