--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .clock{
-    /* position: absolute; */
+    position: relative;
     width: 500px;
     height: 500px;
     border: 20px solid black;
