--- a/style.css
+++ b/style.css
@@ -74,21 +74,39 @@ body{
     top: 10px;
     left: 240px;
 }
-/* .seconds{
+.seconds{
     width: 400px;
     height: 400px;
     position: absolute;
     top: 50px;
     left: 50px;
     border-radius: 50%;
-} */
-/* .hand{
+}
+.sechand{
     position: relative;
 }
-.arrow{
+.sechand .hand{
     width: 4px;
     height: 200px;
     background-color: rgb(250, 0, 0);
     position: absolute;
     left: 199px;
-} */
+}
+.minutes{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    border-radius: 50%;
+}
+.minhand{
+    position: relative;
+}
+.minhand .hand{
+    width: 4px;
+    height: 150px;
+    background-color: rgb(44, 46, 180);
+    position: absolute;
+    left: 199px;
+}
