--- a/style.css
+++ b/style.css
@@ -98,7 +98,9 @@ body{
     color: red;
     transform: rotate(180deg);
     position: absolute;
-    
+    font-family:Arial, Helvetica, sans-serif;
+    left: 190px;
+    top: -7px;
 }
 .minutes{
     width: 300px;
