--- a/style.css
+++ b/style.css
@@ -74,9 +74,37 @@ body{
     top: 10px;
     left: 240px;
 }
+.minutes{
+    width: 350px;
+    height: 350px;
+    position: absolute;
+    top: 75px;
+    left: 75px;
+    border-radius: 50%;
+}
+.minhand{
+    position: relative;
+}
+.minhand .hand{
+    width: 4px;
+    height: 175px;
+    background-color: rgb(44,46,180);
+    position: absolute;
+    left: 174px;
+}
+.minhand .arrow{
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(44,46,180);
+    transform: rotate(180deg);
+    position: absolute;
+    font-family:Arial, Helvetica, sans-serif;
+    left: 166px;
+    top: -7px;
+}
 .seconds{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     position: absolute;
     top: 50px;
     left: 50px;
@@ -102,21 +130,31 @@ body{
     left: 190px;
     top: -7px;
 }
-.minutes{
+ .hours{
     width: 300px;
     height: 300px;
     position: absolute;
-    top: 50px;
-    left: 50px;
+    top: 100px;
+    left: 100px;
     border-radius: 50%;
 }
-.minhand{
+.hourhand{
     position: relative;
 }
-.minhand .hand{
+.hourhand .hand{
     width: 4px;
-    height: 200px;
-    background-color: rgb(44, 46, 180);
+    height: 150px;
+    background-color: rgb(18, 18, 20);
     position: absolute;
-    left: 199px;
+    left: 148px;
+}
+.hourhand .arrow{
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(18, 18, 20);
+    transform: rotate(180deg);
+    position: absolute;
+    font-family:Arial, Helvetica, sans-serif;
+    left: 140px;
+    top: -7px;
 }
