--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body{
     position: absolute;
     left: 148px;
 }
-.hourhand .arrow{
+/* .hourhand .arrow{
     font-size: 30px;
     font-weight: bold;
     color: rgb(18, 18, 20);
@@ -157,4 +157,4 @@ body{
     font-family:Arial, Helvetica, sans-serif;
     left: 140px;
     top: -7px;
-}
+} */
