--- a/style.css
+++ b/style.css
@@ -74,6 +74,34 @@ body{
     top: 10px;
     left: 240px;
 }
+.seconds{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    border-radius: 50%;
+}
+.sechand{
+    position: relative;
+}
+.sechand .hand{
+    width: 4px;
+    height: 200px;
+    background-color: red;
+    position: absolute;
+    left: 199px;
+}
+/* .sechand .arrow{
+    font-size: 30px;
+    font-weight: bold;
+    color: red;
+    transform: rotate(180deg);
+    position: absolute;
+    font-family:Arial, Helvetica, sans-serif;
+    left: 190px;
+    top: -7px;
+} */
 .minutes{
     width: 350px;
     height: 350px;
