--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body{
     top: 50px;
     left: 50px;
     border-radius: 50%;
+    transform: translate(-50%, -100%);
 }
 .sechand{
     position: relative;
