--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body{
     top: 10px;
     left: 240px;
 }
-.seconds{
+/* /* .seconds{
     width: 300px;
     height: 300px;
     position: absolute;
@@ -82,10 +82,10 @@ body{
     left: 50px;
     border-radius: 50%;
     transform: translate(-50%, -100%);
-}
+} */
 .sechand{
     position: relative;
-}
+} 
 /* .sechand .hand{
     width: 4px;
     height: 200px;
