--- a/style.css
+++ b/style.css
@@ -83,9 +83,9 @@ body{
     border-radius: 50%;
     transform: translate(-50%, -100%);
 } */
-.sechand{
+/* .sechand{
     position: relative;
-} 
+}  */
 /* .sechand .hand{
     width: 4px;
     height: 200px;
