--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body{
     top: 10px;
     left: 240px;
 }
-/* /* .seconds{
+/* .seconds{
     width: 300px;
     height: 300px;
     position: absolute;
@@ -82,17 +82,17 @@ body{
     left: 50px;
     border-radius: 50%;
     transform: translate(-50%, -100%);
-} */
-/* .sechand{
+}
+.sechand{
     position: relative;
-}  */
-/* .sechand .hand{
+} 
+.sechand .hand{
     width: 4px;
     height: 200px;
     background-color: red;
     position: absolute;
     left: 200px;
-    transform-origin: bottom;
+    transform-origin: bottom; 
 } */
 /* .sechand .arrow{
     font-size: 30px;
